transicao Blog puro CSS

--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -1,71 +1,18 @@
 {% extends 'blog/base.html' %}
-{% load staticfiles %}
 
 {% block content %}
 <style media="screen">
-  .about{
-    display: none;
+  #sobre{
+    background-color: #35AFD2;
+    color: white;
   }
 </style>
-<div class="container">
-  <div class="section">
-    <div class="col s12 center">
-    <h3>Sistemas para Internet P2</h3>
-    <h5>Integrantes</h5>
-    <div class="container" style="margin-top:20px">
-    <div class="card z-depth-3">
-          <table class="bordered"style="font-size:16px">
-            <thead>
-              <tr>
-                  <th>Nome</th>
-                  <th>Matrícula</th>
-              </tr>
-            </thead>
-
-            <tbody>
-              <tr>
-                <td>Alexandre Silva dos Santos</td>
-                <td>1710018026</td>
-              </tr>
-              <tr>
-                <td>Anibal de Medeiros Batista Filho</td>
-                <td>1710017987</td>
-              </tr>
-              <tr>
-                <td>Dian Eric Audrey Alves da Silva</td>
-                <td>1710018863</td>
-              </tr>
-              <tr>
-                <td>Evangil da Silva</td>
-                <td>1710018723</td>
-              </tr>
-              <tr>
-                <td>Marcel Marques Matias</td>
-                <td>1710017713</td>
-              </tr>
-              <tr>
-                <td>Rodrigo Oliveira Gomes dos Santos</td>
-                <td>1710019576</td>
-              </tr>
-              <tr>
-                <td>Ronaldo Costa Cordeiro</td>
-                <td>1710017723</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-        <div class="" style="margin-top:55px; margin-bottom:55px">
-          <img class="materialboxed z-depth-5" data-caption="Nossa Equipe" width="100%" src="{% static 'grupo.jpeg' %}">
-        </div>
-      </div>
-    </div>
+<div class="card">
+  <div class="container" style="padding: 15px 10px 15px">
+  <h1 style="font-size:19px">Sobre</h1>
+    <p style="text-align: justify">Sou estudante de Sistemas para internet, fiz esse Blog como exemplo de um site em HTML e CSS.</p>
+    <p style="text-align: justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p style="text-align: justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
   </div>
 </div>
 {% endblock %}
-
-
-<div class="container">
-  <h5><a href="" style="color: #132731">Sobre</a></h5>
-  <p style="text-align: justify">Sou estudante de Sistemas para internet, fiz esse Blog como parte de um projeto de programação em Django Python. Além de Django este Blog também utiliza o framework Materialize para a geração de toda a interface.</p>
-  <p style="text-align: justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-</div>
