--- a/blog/static/css/style.css
+++ b/blog/static/css/style.css
@@ -1,70 +1,218 @@
-/* Custom Stylesheet */
-/**
- * Use this file to override Materialize files so you can update
- * the core Materialize files in the future
- *
- * Made By MaterializeCSS.com
- */
-
-
- body {
-   display: flex;
-   min-height: 100vh;
-   flex-direction: column;
- }
-
- main {
-   flex: 1 0 auto;
- }
-
-
-nav ul a,
-nav .brand-logo {
-  color: #444;
+html, body {
+  height: 100%;
+}
+body {
+  display: flex;
+  flex-direction: column;
+  margin:0;
+  font-family: 'Roboto', sans-serif;
+  background-color: #F5F5F5;
 }
 
-p {
-  line-height: 2rem;
+.card {
+  /* Add shadows to create the "card" effect */
+  margin: 7px;
+  max-width: 1000px;
+  box-shadow: 0 2px 8px 0 rgba(0,0,0,0.2);
+  background-color: white;
+  margin: 15px auto;
+  /*transition: 0.3s;*/
 }
 
-.button-collapse {
-  color: #26a69a;
+.container {
+    padding: 2px 16px;
 }
 
-.parallax-container {
-  min-height: 380px;
-  line-height: 0;
-  height: auto;
-  color: rgba(255,255,255,.9);
+/* PERSONALIZAÇÃO DE LINKS */
+a:link.btn, a:visited.btn {
+    background-color: #27ad88;
+    color: white;
+    padding: 10px 15px;
+    border-radius: 30px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    transition: 0.5s;
 }
-  .parallax-container .section {
-    width: 100%;
+a:hover.btn, a:hover.btn {
+  box-shadow: 0 3px 16px 0 rgba(0,0,0,0.2);
+  transition: 0.5s;
+}
+a:link.btn-color, a:visited.btn-color{
+  background-color:#35AFD2
+}
+a:link.btn-color-orange, a:visited.btn-color-orange{
+  background-color:#d25835
+}
+
+/* Efeito pulsar para botão */
+.pulso {
+  display: block;
+  border-radius: 50%;
+  background: #35d2a7;
+  cursor: pointer;
+  box-shadow: 0 0 0 rgba(53,210,210, 0.9);
+  animation: pulso 1s infinite;
+}
+
+
+@-webkit-keyframes pulso {
+  0% {
+    -webkit-box-shadow: 0 0 0 0 rgba(53, 175, 210, 0.4);
   }
+  70% {
+      -webkit-box-shadow: 0 0 0 10px rgba(53, 175, 210, 0);
+  }
+  100% {
+      -webkit-box-shadow: 0 0 0 0 rgba(53, 175, 210, 0);
+  }
+}
+@keyframes pulso {
+  0% {
+    -moz-box-shadow: 0 0 0 0 rgba(53, 175, 210, 0.5);
+    box-shadow: 0 0 0 0 rgba(53, 175, 210, 0.5);
+  }
+  70% {
+      -moz-box-shadow: 0 0 0 10px rgba(53, 175, 210, 0);
+      box-shadow: 0 0 0 10px rgba(53, 175, 210, 0);
+  }
+  100% {
+      -moz-box-shadow: 0 0 0 0 rgba(53, 175, 210, 0);
+      box-shadow: 0 0 0 0 rgba(53, 175, 210, 0);
+  }
+}
 
-@media only screen and (max-width : 992px) {
-  .parallax-container .section {
+/* Estilo de botão */
+
+button {
+    background-color: #35AFD2;
+    border: none;
+    color: white;
+    font-size: 15px;
+    padding: 12px 14px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 30px;
+    transition: 0.5s;
+    text-decoration: none;
+    outline : 0;
+}
+
+button:hover {
+    transition: 0.5s;
+    box-shadow: 0 3px 16px 0 rgba(0,0,0,0.2);
+    cursor: pointer;
+}
+
+input[type=text], input[type=textarea], input[type=password], input[type=url] {
+    padding: 10px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+/* Centralizar card tela de login */
+.card.center-align-login {
+  display: table;
+  margin: 150px auto 0;
+}
+
+/* Centralizar card tela de comentário */
+.card.center-align-comentario {
+  display: table;
+  margin: 90px auto 0;
+}
+
+/* TOPNAV */
+
+.topnav {
+  overflow: hidden;
+  background-color: grey;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: justify;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav span {
+  font-family: 'Monda', sans-serif;
+  float: right;
+  display: block;
+  color: #fff;
+  text-align: justify;
+  font-weight: bold;
+  padding: 9px 16px;
+  text-decoration: none;
+  font-size: 18px;
+  letter-spacing: 5px;
+}
+
+.topnav a:hover {
+  background-color: #35AFD2;
+  color: white;
+}
+
+.active {
+  background-color: #35AFD2;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+  .card{
+    margin: 15px 15px;
+  }
+  .topnav span {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
     position: absolute;
-    top: 40%;
-  }
-  #index-banner .section {
-    top: 10%;
-  }
-}
-
-@media only screen and (max-width : 600px) {
-  #index-banner .section {
+    right: 0;
     top: 0;
   }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+
 }
 
-.icon-block {
-  padding: 0 15px;
+/* Footer */
+.content {
+  flex: 1 0 auto;
 }
-.icon-block .material-icons {
-  font-size: inherit;
-  color:#263238;
+footer{
+  margin-top: 10px;
+  background-color: #DCDCDC;
+  text-align: center;
+  color: black
 }
 
-footer.page-footer {
-  margin: 0;
+img {
+  display: block;
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
 }
