--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,36 +1,83 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-  <div class="container">
+  <div class="card">
+    <div style="text-align:center">
+      <img src="{{ post.url }}" alt="" style="width:100%; height:200px;">
+    </div>
+    <div class="container" style="padding: 15px 10px 15px">
           {% if post.published_date %}
-                {{ post.published_date }}
+             <div style="text-align:right; font-size:13px">
+                <span style="text-align:right">{{ post.published_date }}</span>
+              </div>
           {% endif %}
-          <h3>{{ post.title }}</h3>
-          <p style="text-align: justify">{{ post.text|linebreaksbr }}</p><br>
-          Autor: {{ post.author }}
-          {% if user.is_authenticated %}
-            <br><br><br>
-            <a class="btn waves-effect waves-light orange left" href="{% url 'post_edit' pk=post.pk %}"><i class="material-icons">create</i></a>
-            <a class="btn waves-effect waves-light red right" href="{% url 'post_remove' pk=post.pk %}"><i class="material-icons">close</i></a><br><br><br><br>
-          {% else %}
-            <a class="btn waves-effect waves-light blue right" href="{% url 'add_comment_to_post' pk=post.pk %}">Comentar</a><br><br>
-          {% endif %}
-          <h5>Comentários</h5><br>
-          {% for comment in post.comments.all %}
-              {% if user.is_authenticated or comment.approved_comment %}
-                  <div class="card-panel">
-                    <div class="date right" style="font-size:12px">{{ comment.created_date }}</div>
-                    <strong>{{ comment.author }}</strong>
-                    <p>{{ comment.text|linebreaks }}</p>
-                    {% if not comment.approved_comment %}
-                        <br>
-                        <a class="btn blue waves-effect waves-light" href="{% url 'comment_approve' pk=comment.pk %}"><i class="material-icons">check</i></span></a>
-                        <a class="btn red waves-effect waves-light" href="{% url 'comment_remove' pk=comment.pk %}"><i class="material-icons">close</i></a>
-                    {% endif %}
+          <h1 style="font-size:19px; margin-top:-2px">{{ post.title }}</h1>
+          <p style="text-align: justify;">{{ post.text|linebreaksbr }}</p><br>
+          <p style="text-align:left; font-size:15px;">Autor: {{ post.author }}</p>
+          <div style="text-align:right">
+            {% if user.is_authenticated %}
+              <a  href="{% url 'post_remove' pk=post.pk %}"  class="btn" style="background-color: red">Remover</a>
+              <a class="btn" href="{% url 'post_edit' pk=post.pk %}" style="background-color: orange">Edit</a>
+              <!-- <br><br><br>
+              <a href="#modal1" class="modal-trigger btn waves-effect waves-light red right"><i class="material-icons">close</i></a><br><br><br><br> -->
+              <!-- Modal Structure -->
+              <!-- <div id="modal1" class="modal">
+                <div class="modal-content">
+                  <h4>Atenção!</h4>
+                  <p>Tem certeza que deseja remover esta postagem?<br> <span style="color:red">Essa ação apagará definitivamente a postagem do blog.</span></p>
                 </div>
-              {% endif %}
-        {% empty %}
-        <p>Sem comentários ainda :(</p>
-        {% endfor %}
-  </div><br>
+                <div class="modal-footer">
+                  <a  href="{% url 'post_remove' pk=post.pk %}"  class="modal-action modal-close waves-effect waves-red btn-flat">Remover</a>
+                  <button type="button" class="modal-close waves-effect waves-green btn-flat" name="button">Cancelar</button>
+                </div>
+              </div> -->
+            {% endif %}
+            <a class="btn pulso btn-color" href="{% url 'add_comment_to_post' pk=post.pk %}" style="margin-right: 10px">Comentar</a>
+          </div>
+    </div><br>
+  </div>
+  <h5 style="margin: 20px 0; color:grey; text-align:center" id="comentarios">Comentários</h5>
+      {% for comment in post.comments.all %}
+      <div class="card">
+        <div class="container" style="padding: 15px 10px 15px">
+          <div style="font-size:12px; text-align:right">{{ comment.created_date }}</div>
+          <strong>{{ comment.author }}</strong>
+          <p>{{ comment.text|linebreaks }}</p>
+          {% if user.is_authenticated or comment.approved_comment %}
+                {% if not comment.approved_comment %}
+                <div style="text-align:right">
+                  <a href="{% url 'comment_remove' pk=comment.pk %}"  class="btn" style="background-color:red">Remover</a>
+                  <a class="btn btn-color" href="{% url 'comment_approve' pk=comment.pk %}">Ok</a>
+                </div>
+                      <!-- <br>
+                      <a class="btn blue waves-effect waves-light" href="{% url 'comment_approve' pk=comment.pk %}"><i class="material-icons">check</i></span></a>
+                      <a class="btn red waves-effect waves-light" href="#modal2"><i class="material-icons">close</i></a>
+                      <div id="modal2" class="modal">
+                        <div class="modal-content">
+                          <h4>Atenção!</h4>
+                          <p>Tem certeza que deseja remover este comentário?<br> <span style="color:red">Essa ação apagará definitivamente o comentário do blog.</span></p>
+                        </div>
+                        <div class="modal-footer">
+                          <a href="{% url 'comment_remove' pk=comment.pk %}"  class="modal-action modal-close waves-effect waves-red btn-flat">Remover</a>
+                          <button type="button" class="modal-close waves-effect waves-green btn-flat" name="button">Cancelar</button>
+                        </div>
+                      </div> -->
+                {% endif %}
+          {% endif %}
+        </div>
+      </div>
+    {% endfor %}
+    {% if post.approved_comments.count == 0 %}
+    <div class="card">
+      <div class="container" style="padding: 15px 10px 15px">
+        <p>Não há comentários feitos ou ainda estão sob avaliação.</p>
+      </div>
+    </div>
+    {% endif %}
+    <script type="text/javascript">
+      var get = localStorage.getItem("storageName");
+      if (get == 1){
+        window.scrollTo(0,document.body.scrollHeight);
+      }
+    </script>
 {% endblock %}
