--- a/blog/templates/blog/search.html
+++ b/blog/templates/blog/search.html
@@ -1,26 +1,43 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
+<style media="screen">
+  #pesquisa{
+    background-color: #35AFD2;
+    color: white;
+  }
+</style>
+<div class="card">
+  <div class="container" style="padding: 15px 10px 15px; text-align:center">
+    <form method="get">
+          <input name="title" id="id_title" type="text" placeholder="Busca por título">
+          <button type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
+    </form>
+    </div>
+  </div>
 
-</form><br><br>
-</div><br><br>
-  <ul>
-  {% for post in filter.qs %}
-  <div class="container">
-        <h5><a href="" style="color: #132731">{{ post.title }}</a></h5>
-        <p style="text-align: justify">{{ post.text|linebreaksbr|slice:":355"}}...</p><br>
-        <p style="color: #aeaeae">Publicado em: {{ post.published_date }} </p>
-        <a href="{% url 'post_detail' pk=post.pk %}" class="btn blue waves-effect waves-light right">Ler Completo</a>
-        <a href="{% url 'post_detail' pk=post.pk %}">Comments: {{ post.approved_comments.count }}</a>
-        <span class="right" style="margin-right:50px">Autor: {{ post.author }}</span>
+      {% for post in filter.qs %}
+      <div class="card">
+        <div class="container" style="padding: 15px 10px 15px">
+            <h3>{{ post.title }}</h3>
+            <p style="text-align: justify">{{ post.text|linebreaksbr|slice:":355"}}...</p><br>
+            <p style="color: #aeaeae; text-align:left">Publicado em: {{ post.published_date }} </p>
+            <div style="text-align:left">
+              <span>Autor: {{ post.author }}</span>
+            </div>
+            <div style="text-align:right">
+              <a href="{% url 'post_detail' pk=post.pk %}" class="btn">Ler Completo</a>
+              {% if post.approved_comments.count > 0 %}
+                <a href="{% url 'post_detail' pk=post.pk %}" class="btn btn-color">{{ post.approved_comments.count }} Comentários</a>
+              {% else %}
+                <a href="{% url 'post_detail' pk=post.pk %}" class="btn-color-orange btn"> {{ post.approved_comments.count }} Comentários</a>
+              {% endif %}
+            </div>
+          </div>
+        </div>
+      </div>
+      {% empty %}
+      <p>Nenhuma postagem com essas palavras encontrada :(</p>
+      {% endfor %}
 
-
-  </div><br><br><br><br><br>
-  {% empty %}
-  <p>Nenhuma postagem com essas palavras encontrada :(</p>
-  {% endfor %}
-  </ul>
-{% endblock %}
-
-<!-- Input de search -->
-<!-- <a class="waves-effect waves-light btn" href="?title=post">Modal</a> -->
+    {% endblock %}
