--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -2,47 +2,28 @@
 
 {% block content %}
 <style media="screen">
-  body{
-    background-color: #E2E2E2;
-  }
-  footer{
-    display: none;
-  }
-  .login{
-    display: none;
+  #gerencia{
+    background-color: #35AFD2;
+    color: white;
   }
 </style>
-  <div class="row" style="max-width:350px; margin-top:10%">
-    <div class="col s12">
-      <div class="card z-depth-3">
-        <form method="post" action="{% url 'login' %}" style="margin-top:30px">
-        <div class="card-content">
-          <div>
-            <span class="card-title center">Login</span>
-            {% if form.errors %}
-              <p style="text-align:center">Seu nome de usuário ou senha não estão corretos. <br> Tente novamente.</p>
-            {% endif %}
-          </div>
-            {% csrf_token %}
-            <div class="">
-              <div class="input-field">
-                {{ form.username }}
-                <label for="{{form.username.id_for_label}}">Usuário</label>
-              </div>
-              <div class="input-field">
-                {{ form.password }}
-                <label for="{{form.password.id_for_label}}">Senha</label>
-              </div>
-
-            </div>
+<div class="card center-align-login" style="box-shadow: 0 8px 20px 0 rgba(0,0,0,0.2);">
+  <div class="container" style="padding: 15px 10px 15px;">
+    {% if form.errors %}
+        <p style="font-size:15px; text-align:justify; max-width:210px; color:red">Seu nome de usuário ou senha não estão corretos. Tente novamente</p>
+    {% endif %}
+    <form method="post" action="{% url 'login' %}">
+      {% csrf_token %}
+      <div>
+        {{ form.username.label_tag }}<br>
+        {{ form.username }}<br>
+        {{ form.password.label_tag }}<br>
+        {{ form.password }}<br>
+        <div style="text-align:center">
+          <button type="submit" value="login">Logar</button>
         </div>
-        <div class="card-action">
-          <div class="center-align">
-            <button class="btn blue waves-effect waves-light" type="submit">Logar</button>
-          </div>
-        </div>
-        </form>
       </div>
-    </div>
-  </div>
+          <input type="hidden" name="next" value="{{ next }}" />
+    </form>
+</div>
 {% endblock %}
