--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -1,12 +1,13 @@
 {% extends 'blog/base.html' %}
 
-{% block content %}
-<style media="screen">
+{% block style %}
   #sobre{
     background-color: #35AFD2;
     color: white;
   }
-</style>
+{% endblock %}
+
+{% block content %}
 <div class="card">
   <div class="container" style="padding: 15px 10px 15px">
   <h1 style="font-size:19px">Sobre</h1>
