--- a/blog/templates/blog/add_comment_to_post.html
+++ b/blog/templates/blog/add_comment_to_post.html
@@ -24,7 +24,7 @@
   </div>
 </div>
 
-<script type="text/javascript">
+<script>
   function Validate() {
      var nome = document.getElementById("id_author").value;
      if(nome == ""){
