--- a/blog/templates/blog/search.html
+++ b/blog/templates/blog/search.html
@@ -1,12 +1,14 @@
 {% extends 'blog/base.html' %}
 
-{% block content %}
-<style media="screen">
+{% block style %}
   #pesquisa{
     background-color: #35AFD2;
     color: white;
   }
-</style>
+{% endblock %}
+
+{% block content %}
+
 <div class="card">
   <div class="container" style="padding: 15px 10px 15px; text-align:center">
     <form method="get">
