--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -8,6 +8,14 @@
 {% endblock %}
 
 {% block content %}
+<!-- <div class="card" style="max-width:200px">
+  <div style="text-align:center;">
+    <img class="avatar" src="https://pbs.twimg.com/profile_images/876113051484905473/hMpuZsMR_400x400.jpg">
+  </div>
+  <div class="container" style="padding: 15px 10px 15px; text-align:center">
+    <p style="font-weight:bold; letter-spacing:7px; font-size:20px; margin-top:-10px">Marcel</p>
+  </div>
+</div> -->
   {% for post in posts %}
   <div class="card">
     <div style="text-align:center">
